--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,30 @@
     <!--External References-->
     <link href="https://fonts.googleapis.com/css?family=Ramabhadra&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <section class="container">
-        <header>
-            <div id="nameCard">
-                <a href="index.html">Coolie J Calihan</a>
-            </div>
-            <nav>
-                <p> <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a> | <a href="assets/docs/Coolie Calihan - Cirriculum Vitae.pdf" target="_blank">C.V.</a></p>
-            </nav>
-        </header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="index.html">Coolie J Calihan</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="assets/docs/Coolie Calihan - Cirriculum Vitae.pdf">C.V.</a>
+                        </li>
+                        </ul>
+                    </div>
+                </nav>
     </section>
 
     <section class="content">
